# medium_posts

./: main.tex  pyproject.toml
.devcontainer/: Dockerfile
LaTeXTemplates_lachaise-assignment_v2.0/: main.aux  main.tex
conditional_ddpms/: conditional_ddpms.aux  conditional_ddpms.bbl  conditional_ddpms.blg  conditional_ddpms.tex  main.aux  main.bbl  references.bib
conditional_ddpms/slide_presenation/: main.aux  main.run.xml  main.toc  main.vrb  presentation_cond_ddpms.aux  presentation_cond_ddpms.blg  presentation_cond_ddpms.nav  presentation_cond_ddpms.run.xml  presentation_cond_ddpms.toc  presentation_cond_ddpms.vrb
ddpms_deep_learning_class/: main.blg  presentation.aux  presentation.bcf  presentation.tex
ddpms_deep_learning_class/Template_de_apresentação__IME_USP_/: main.aux  main.nav  main.out  main.tex  main.toc
ddpms_deep_learning_class/slide_presenation/: main.blg  main.nav  main.out  main.tex
deep_learning_topics/: main.aux  main.tex
intro_teoria_grafos/: main.aux  main.tex
nn_vs_cnn_mnist_classifier/: main.aux  main.tex
prob_univariate_models/: main.aux  main.tex
recommendation_systems/: main.aux  main.tex
sinusoidal_embeddings/: main.aux  main.html  main.tex  pyproject.toml
text_to_image_ddpm/: main.aux  main.bbl  main.blg  main.tex  references.bib
text_to_image_ddpm_intelligence_is_artificial/: main.aux  main.bbl  main.blg  main.tex
unet/: main.aux  main.bbl  main.blg  main.run.xml  main.tex  referencias.bib
unet_ablation/: main.aux  main.bbl  main.bcf  main.blg  main.tex  pyproject.toml  referencias.bib  univariate_models.ipynb
(+37 files in other folders)
