[tool.poetry]
name = "medium-posts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
ipykernel = "^6.29.5"
torch = "^2.5.1"
matplotlib = "^3.10.0"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
